--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.62",
+		"@sveltejs/adapter-static": "^1.0.0-next.32",
 		"@sveltejs/kit": "next",
 		"@types/three": "^0.140.0",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
